--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -4,7 +4,7 @@
 		"description": "Name of the extension that appears on the Extensions page."
 	},
 	"description": {
-		"message": "Check GMail, Google Reader, Google Voice, and Google Wave.  Many sources, one number.",
+		"message": "Check GMail, Google Reader, and Google Voice.  Many sources, one number.",
 		"description": "The description that appears on the Extensions page."
 	},
 	"default_title": {
@@ -434,23 +434,7 @@
 		"message": "Check for any unread messages, not just in the Inbox.",
 		"description": "Checkbox caption."
 	},
-	"options_gwappsdomain": {
-		"message": "Google Apps domain to check (blank for Google Wave): ",
-		"description": "Textbox caption."
-	},
-	"options_gwminnav": {
-		"message": "Minimize navigation pane when opened from popup.",
-		"description": "Checkbox caption."
-	},
-	"options_gwmincontact": {
-		"message": "Minimize contacts pane when opened from popup.",
-		"description": "Checkbox caption."
-	},
-	"options_gwminsearch": {
-		"message": "Minimize search pane when opened from popup.",
-		"description": "Checkbox caption."
-	},
-	
+
 	"ok": {
 		"message": "OK",
 		"description": "Caption for OK button on options page."
@@ -562,21 +546,6 @@
 	"googlevoice_displayname": {
 		"message": "Google Voice",
 		"description": "Service display name."
-	},
-	
-	"googlewave_displayname": {
-		"message": "Google Wave",
-		"description": "Service display name."
-	},
-	"googlewave_unreadblips": {
-		"message": "$unreadcount$ unread blips.",
-		"description": "Displays the unread blips count.",
-		"placeholders": {
-			"unreadcount": {
-				"content": "$1",
-				"example": "0"
-			}
-		}
 	},
 	
 	"changelog_title": {
@@ -692,14 +661,6 @@
 	},
 	"resource3after": {
 		"message": "Unknown origin, artist, and license.",
-		"description": "Description of resource."
-	},
-	"resource4url": {
-		"message": "Google Wave popup icons",
-		"description": "Text of link to the aforementioned image."
-	},
-	"resource4after": {
-		"message": "by dolphinsdock and licensed under the Creative Commons Attribution-Share Alike 2.0 Generic License.",
 		"description": "Description of resource."
 	}
 }
